--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 
     <footer id="contacts" style="background-color: black; color: white; padding: 10px 0px 10px 0px;">
       <section class="container">
-         <p> Контакты: <br> @dilstey (телеграм)</p>
+        <h2>Контакты</h2>
+         <p>@dilstey (телеграм)</p>
       </section> 
     </footer>
 
