--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <footer id="contacts" style="background-color: black; color: white; padding: 10px 0px 10px 0px;">
       <section class="container">
         <h2>Контакты</h2>
-         <p>@dilstey (телеграм)</p>
+         <p class="text-center">@dilstey (телеграм)</p>
       </section> 
     </footer>
 
